--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.cetnaline.myapplication">
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
-    <!--<uses-permission android:name="android.permission.SYSTEM_OVERLAY_WINDOW" />-->
-    <!--<uses-permission-->
-        <!--android:name="android.permission.INTERNAL_SYSTEM_WINDOW"-->
-        <!--tools:ignore="ProtectedPermissions" />-->
+
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" /> <!-- <uses-permission android:name="android.permission.SYSTEM_OVERLAY_WINDOW" /> -->
+    <!-- <uses-permission -->
+    <!-- android:name="android.permission.INTERNAL_SYSTEM_WINDOW" -->
+    <!-- tools:ignore="ProtectedPermissions" /> -->
     <uses-permission android:name="android.permission.READ_CLIPBOARD_IN_BACKGROUND" /> <!-- <permission android:name="com.cetnaline.myapplication.PROVIDER"/> -->
     <permission android:name="android.permission.INTERNET" />
     <permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -18,17 +18,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BitmapActivity">
+        <activity android:name=".RecyclerActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".BitmapActivity">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
 
-
-        <activity android:name=".HorizontalScrollActivity">
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
+        <activity android:name=".HorizontalScrollActivity"></activity>
 
         <service
             android:name=".TCPService"
@@ -37,9 +41,7 @@
             android:process=".tcpservice" />
 
         <activity android:name=".BookManagerActivity" />
-        <activity android:name=".MainActivity">
-
-        </activity>
+        <activity android:name=".MainActivity"></activity>
 
         <service
             android:name=".MyService"
@@ -54,17 +56,16 @@
             android:permission="com.cetnaline.myapplication.PROVIDER"
             android:process=".provider" />
 
-
         <receiver android:name=".MyAppWidgetProvider">
-            <meta-data android:name="android.appwidget.provider"
-                android:resource="@xml/appwidget_provider_info"/>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/appwidget_provider_info" />
+
             <intent-filter>
-                <action android:name="com.cetnaline.myapplication.CLICK"/>
-                <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
+                <action android:name="com.cetnaline.myapplication.CLICK" />
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
-
         </receiver>
-
     </application>
 
 </manifest>
